--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "country-flag-emoji-polyfill": "^0.1.8",
+    "emoji-flags": "^1.3.0",
     "json-server": "^1.0.0-beta.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
