--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "country-flag-emoji-polyfill": "^0.1.8",
+    "emoji-flags": "^1.3.0",
     "json-server": "^1.0.0-beta.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2"
